--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "GPLv3",
   "main": "./",
   "dependencies": {
+    "cookie-parser": "^1.4.0",
     "es6-promise": "^3.0.2",
     "history": "^1.13.1",
     "isomorphic-fetch": "^2.2.0",
